@@ -11,20 +11,19 @@ import java.util.concurrent.ConcurrentMap;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 
-import com.ibm.pross.common.CommonConfiguration;
+import com.ibm.pross.common.config.CommonConfiguration;
+import com.ibm.pross.common.config.KeyLoader;
+import com.ibm.pross.common.config.ServerConfiguration;
+import com.ibm.pross.common.exceptions.http.BadRequestException;
+import com.ibm.pross.common.exceptions.http.HttpStatusCode;
+import com.ibm.pross.common.exceptions.http.NotFoundException;
+import com.ibm.pross.common.exceptions.http.UnauthorizedException;
 import com.ibm.pross.server.app.avpss.ApvssShareholder;
 import com.ibm.pross.server.app.avpss.SharingState;
 import com.ibm.pross.server.app.http.HttpRequestProcessor;
-import com.ibm.pross.server.app.http.HttpStatusCode;
 import com.ibm.pross.server.configuration.permissions.AccessEnforcement;
 import com.ibm.pross.server.configuration.permissions.ClientPermissions.Permissions;
-import com.ibm.pross.server.configuration.permissions.exceptions.BadRequestException;
-import com.ibm.pross.server.configuration.permissions.exceptions.NotFoundException;
-import com.ibm.pross.server.configuration.permissions.exceptions.UnauthorizedException;
 import com.sun.net.httpserver.HttpExchange;
-
-import bftsmart.reconfiguration.util.sharedconfig.KeyLoader;
-import bftsmart.reconfiguration.util.sharedconfig.ServerConfiguration;
 
 /**
  * This handler returns information about a secret. Client's must have a
@@ -134,13 +133,20 @@ public class InfoHandler extends AuthenticatedClientRequestHandler {
 			
 			// Return the result in json
 			final JSONObject obj = new JSONObject();
-			obj.put("responder", new Integer(serverIndex));
-			obj.put("epoch", new Long(shareholder.getEpoch()));
+			obj.put("responder", Integer.valueOf(serverIndex));
+			obj.put("epoch", Long.valueOf(shareholder.getEpoch()));
 
-			JSONArray inputPoint = new JSONArray();
-			inputPoint.add(shareholder.getSecretPublicKey().getX().toString());
-			inputPoint.add(shareholder.getSecretPublicKey().getY().toString());
-			obj.put("public_key", inputPoint);
+			final JSONArray publicKeyPoint = new JSONArray();
+			publicKeyPoint.add(shareholder.getSecretPublicKey().getX().toString());
+			publicKeyPoint.add(shareholder.getSecretPublicKey().getY().toString());
+			obj.put("public_key", publicKeyPoint);
+			
+			for (int i = 1; i <= shareholder.getN(); i++) {
+				final JSONArray verificationPoint = new JSONArray();
+				verificationPoint.add(shareholder.getSharePublicKey(i).getX().toString());
+				verificationPoint.add(shareholder.getSharePublicKey(i).getY().toString());
+				obj.put("share_verification_key_" + i, verificationPoint);
+			}
 
 			return obj.toJSONString() + "\n";
 		}
@@ -148,7 +154,7 @@ public class InfoHandler extends AuthenticatedClientRequestHandler {
 		// This server
 		final InetSocketAddress thisServerAddress = serverConfig.getServerAddresses().get(serverIndex - 1);
 		final String ourIp = thisServerAddress.getAddress().getHostAddress();
-		final int ourPort = HttpRequestProcessor.BASE_HTTP_PORT + serverIndex;
+		final int ourPort = CommonConfiguration.BASE_HTTP_PORT + serverIndex;
 
 		// Create response
 		final StringBuilder stringBuilder = new StringBuilder();
@@ -302,7 +308,7 @@ public class InfoHandler extends AuthenticatedClientRequestHandler {
 		for (final InetSocketAddress serverAddress : serverConfig.getServerAddresses()) {
 			serverId++;
 			final String serverIp = serverAddress.getAddress().getHostAddress();
-			final int serverPort = HttpRequestProcessor.BASE_HTTP_PORT + serverId;
+			final int serverPort = CommonConfiguration.BASE_HTTP_PORT + serverId;
 			final String linkUrl = "https://" + serverIp + ":" + serverPort + "/info?secretName=" + secretName;
 			stringBuilder
 					.append("server." + serverId + " = " + "<a href=\"" + linkUrl + "\">" + serverAddress + "</a>\n");
